# BCPU

./: .gitignore  CMakeLists.txt  README.md
sources/: app_core.cpp  info.hpp  info_android.cpp  info_linux.cpp  info_macos.cpp  info_nt.cpp  info_winnt.cpp  lib_core.cpp  lib_core.hpp
sources/cli/: CMakeLists.txt  app_core-cli.cpp
sources/ui/: CMakeLists.txt  app_core-ui.cpp
toolchains/: android_aarch64.cmake  linux_aarch64.cmake  linux_x86_64.cmake  nt-arm64.cmake  nt-x86_64.cmake  nt_arm64.cmake  nt_x86_64.cmake
